fixing cross span icon z-index

--- a/public/styles/partials/styles_nav.css
+++ b/public/styles/partials/styles_nav.css
@@ -2,9 +2,8 @@
     width: 100%;
     height: 89px;
     overflow: hidden;
-    background: #fff;
     position: fixed;
-    z-index: 3;
+    z-index: 999;
     top: 0;
 }
 
@@ -83,7 +82,6 @@ span::before {
     justify-content: center;
     align-items: center;
     visibility: hidden;
-    z-index: 2;
 }
 
 .nav-responsive {
